--- a/data/proposal.ipynb
+++ b/data/proposal.ipynb
@@ -5,11 +5,11 @@
    "id": "f20328a9-6994-47be-9b94-14cfbc026fdc",
    "metadata": {},
    "source": [
-    "# Predicting Type of Chest Pain Using Age and Serum Cholesterol Levels as Predictors\n",
+    "# Predicting Type of Chest Pain Using Age, Serum Cholesterol Levels, Resting Blood Pressure and Maximum Heart Rate as Predictors\n",
     "\n",
     "  Elevated cholesterol levels result in plaque build up in arterial walls known as atherosclerosis. This build up causes arteries to narrow, restricting blood flow to the heart. Angina is any chest pain caused by reduced blood flow to the heart. Angina is a warning sign for risk of heart attack and stroke. \n",
     "  \n",
-    "  We will be using a classification model to answer the predictive question can we use the age and serum cholesterol levels of the patient to predict what type of chest pain the patient is experiencing.  The dataset we are using has heart disease data from Cleveland Clinic Foundation retrieved from the web. The dataset contains 14 variables including age, sex, type of chest pain, resting blood pressure, serum cholesterol, fasting blood sugar, resting ECG, maximum heart rate, exercise induced angina, ST depression induced by exercise, slope of peak exercise segment, number of major vessels, defect, and angiographic disease status. It was processed from a larger data set containing 76 raw attributes but only 14 were deemed useful. "
+    "  We will be using a classification model to answer the predictive question can we use the analysis of age, serum cholesterol levels, resting blood pressure and maximum heart rate achieved of the patient to predict what type of chest pain the patient is experiencing.  The dataset we are using has heart disease data from Cleveland Clinic Foundation retrieved from the web. The dataset contains 14 variables including age, sex, type of chest pain, resting blood pressure, serum cholesterol, fasting blood sugar, resting ECG, maximum heart rate achieved, exercise induced angina, ST depression induced by exercise, slope of peak exercise segment, number of major vessels, defect, and angiographic disease status. It was processed from a larger data set containing 76 raw attributes but only 14 were deemed useful. "
    ]
   },
   {
@@ -376,6 +376,7 @@
     }
    ],
    "source": [
+    "#Reading dataset from web into R\n",
     "library(tidyverse)\n",
     "library(readr)\n",
     "library(tidymodels)\n",
@@ -503,7 +504,6 @@
     }
    ],
    "source": [
-    "\n",
     "#There are not any rows with missing data\n",
     "\n",
     "#Table 1 Count and percentage for each category of chestpain\n",
@@ -580,6 +580,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "27fb0cde-4447-46b0-b556-cda64927d5a4",
+   "metadata": {},
+   "source": [
+    "===== ADD ONE PARAGRAPH ABOUT THE FOLLOWING\n",
+    "\n",
+    "Using only training data, summarize the data in at least one table (this is exploratory data analysis). An example of a useful table could be one that reports the number of observations in each class, the means of the predictor variables you plan to use in your analysis and how many rows have missing data. \n",
+    "Using only training data, visualize the data with at least one plot relevant to the analysis you plan to do (this is exploratory data analysis). An example of a useful visualization could be one that compares the distributions of each of the predictor variables you plan to use in your analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "a6e98975-af0d-4c1e-b129-d9e92f5dd0aa",
@@ -602,7 +613,6 @@
     }
    ],
    "source": [
-    "#need to redo with training data and new predictors\n",
     "#Visualization of cholesterol and age\n",
     "options(repr.plot.width = 10, repr.plot.height = 10)\n",
     "age_choles <- cleveland_train |>\n",
@@ -788,12 +798,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16e0a28c-454a-4a59-95f7-08a054d09625",
+   "cell_type": "markdown",
+   "id": "a2d90936-8405-4c00-ba8c-554e8bcb8de4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Methods\n",
+    "\n",
+    "Classification is the method of identifying a design, which helps to separate different variables into numerous categorical classes, i.e. discrete values. For our project, we will be analysing data using the method of classification. Classification will be a useful methodology as our data can be labelled under different labels according to certain variables in input, and then the labels can be projected for the data.\n",
+    "There are 14 different variables in the cleveland_data set which can help to determine and analyize different diseases in cleveland effectively. However, we will not be using all the columns/variables available in the dataset. We believe that a type of chest pain caused to a person depend on different factors and therefore, we want to use different variables to get a much more accurate analysis. The required variables/columns used in our data analysis will be as follows:\n",
+    "- Predictors: Age (years), Serum cholesterol levels (mg/dl), Rest Blood Pressure (mm Hg) and Maximum Heart Rate Achieved (bpm)\n",
+    "              \n",
+    "- Category to predict: Type of Chest Pain (eg: 1, 2, 3, 4)\n",
+    "\n",
+    "We will be plotting the data using different scatter plots by plotting diiferent predictors together into six separate scatter plots and finally combining them all to do an analaysis of all the predictors against type of chest pain.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "819cb9f6-c693-4343-9445-566f65826a52",
+   "metadata": {},
+   "source": [
+    "### Expected Outcomes and Significance\n",
+    "\n",
+    "We are expecting to find the relationship between all the predictors and the type of chest pain a person may have. We can find whether this relationship will be a weak or strong relationship, a positive or negative relationship, and a linear or not linear relationship. We can also find the different types/levels of chest pain based on the variables. If we predict a value of 1 in an analysis it corresponds to typical angina, a value of 2 corresponds to atypical angina, a value of 3 corresponds to nonanginal pain, and a value of 4 corresponds to asymptomatic. \n",
+    "The impact of these findings could help doctors predict which patients are at a higher risk for heart attacks and strokes. Cholesterol, age, Resting Blood Pressure and Maxium Heart Rate Achieved are quick and easily measurable factors. If heart attack and stroke risk can be determined from these factors, doctors can help their patients implement preventative measures prior to the health incidents' occurring. \n",
+    "A possible future question for our data exploration is finding the levels of cholesterol to predict the different type of chest pain. For example, a question could be: “what are the levels of cholesterol in the blood seen in patients diagnosed with typical angina?”. Another future question is discovering the age groups or ranges that are at risk fof the different types of chest pain. For example, a question could be: “what are the age groups that are most at risk for atypical angina?” and many more as we compare with different variables.\n",
+    "\n",
+    "We believe our data analysis of cleveland_data will contribute as it can help understand a prime question much better and help understand the severity of chest pains more effectively."
+   ]
   }
  ],
  "metadata": {
