--- a/data/proposal.ipynb
+++ b/data/proposal.ipynb
@@ -805,17 +805,19 @@
   {
    "cell_type": "markdown",
    "id": "a2d90936-8405-4c00-ba8c-554e8bcb8de4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### Methods\n",
     "\n",
-    "Classification is the method of predicting which category a new observation falls into depending on it's other variables. For our project, we will be analysing data using the method of classification. Classification will be a useful methodology as our data can be labelled under different labels according to certain variables in input, and then the labels can be projected for the data.\n",
-    "There are 14 different variables in the cleveland_data set which can help to determine and analyize different diseases in cleveland effectively. However, we will not be using all the columns/variables available in the dataset. We believe that a type of chest pain caused to a person depend on different factors and therefore, we want to use different variables to get a much more accurate analysis. The required variables/columns used in our data analysis will be as follows:\n",
+    "Classification is the method of predicting which category a new observation falls into depending on it's other variables. For our project, we will be analysing data by training a classifier model with a subset of the data and using this model to predict what type of chest pain the patient is experiencing. Classification will be a useful methodology as we can assign multiple variables to be used as predictors, assign the same weight to each variable, and get a predicted category. There are 14 different variables in the cleveland_data set which all provide information on factors associated with heart disease. Of the available variables, we have chosen the 4 that we deem to be the most useful in predicting type of chest pain. Diagnosing chest pain is a complex process as there are numerous factors that impact the patient's experience. Thus, we have chosen multiple predictors in order to acheive a more accurate analysis of the factors causing chest pain. The required variables used in our data analysis will be as follows:\n",
     "- Predictors: Age (years), Serum cholesterol levels (mg/dl), Rest Blood Pressure (mm Hg) and Maximum Heart Rate Achieved (bpm)\n",
     "              \n",
     "- Category to predict: Type of Chest Pain (eg: 1, 2, 3, 4)\n",
     "\n",
-    "We will be plotting the data using different scatter plots by plotting diiferent predictors together into six separate scatter plots and finally combining them all to do an analaysis of all the predictors against type of chest pain.\n"
+    "We have chosen to plot each permutation of the four variables as scatter plots and colored by the type of chest pain. This allows us visualize any preliminary relationships of individual predictors with type of chest pain. For example, from the above plots it appears as though higher maximum heart rate may be correlated with typical angina. We will also plot distribution graphs to visualize the distribution of each variable for the types of chest pain. From this point, we will combine all of the predictors into the classifiying model, tune and train the model using our training data, and lastly use the final model to predict the type of chest pain for the data in our testing set. "
    ]
   },
   {
@@ -825,9 +827,11 @@
    "source": [
     "### Expected Outcomes and Significance\n",
     "\n",
-    "We are expecting to find the relationship between all the predictors and the type of chest pain a person may have. We can find whether this relationship will be a weak or strong relationship, a positive or negative relationship, and a linear or not linear relationship. We can also find the different types/levels of chest pain based on the variables. If we predict a value of 1 in an analysis it corresponds to typical angina, a value of 2 corresponds to atypical angina, a value of 3 corresponds to nonanginal pain, and a value of 4 corresponds to asymptomatic. \n",
-    "The impact of these findings could help doctors predict which patients are at a higher risk for heart attacks and strokes. Cholesterol, age, Resting Blood Pressure and Maxium Heart Rate Achieved are quick and easily measurable factors. If heart attack and stroke risk can be determined from these factors, doctors can help their patients implement preventative measures prior to the health incidents' occurring. \n",
-    "A possible future question for our data exploration is finding the levels of cholesterol to predict the different type of chest pain. For example, a question could be: “what are the levels of cholesterol in the blood seen in patients diagnosed with typical angina?”. Another future question is discovering the age groups or ranges that are at risk fof the different types of chest pain. For example, a question could be: “what are the age groups that are most at risk for atypical angina?” and many more as we compare with different variables.\n",
+    "We are expecting that our model will enable us to find the relationship between the combination of every predictor and the type of chest pain a person may have. We can find whether this relationship will be a weak or strong relationship, a positive or negative relationship, and a linear or not linear relationship. We will also be able to predict the type of chest pain given the values of each variable. If we predict a value of 1 in an analysis it corresponds to typical angina, a value of 2 corresponds to atypical angina, a value of 3 corresponds to nonanginal pain, and a value of 4 corresponds to asymptomatic. In general, we expect to find that higher values of each predictor relate to typical and atypical angina pain while lower values of each predictor relate to non-anginal and asymptomatic. \n",
+    "\n",
+    "The impact of these findings could help doctors predict which patients are at a higher risk for heart attacks and strokes. Cholesterol, age, resting blood pressure and maxium heart rate are easily measurable factors that a general care physician could measure in typical check ups. If heart attack and stroke risk can be determined from these factors, doctors can help their patients implement preventative measures prior to the health incidents' occurring. Due to the severity of heart disease, it is critical that doctors are able to provide preventative treatment as opposed to reactive treatment. Notably, 12% of patients who experience heart attacks pass away as a result of it. The ability to predict which patients are at a higher risk could save hundreds of thousands of lives each year.\n",
+    "\n",
+    "Our data exploration is centered on finding the levels of each variable that predict the different types of chest pain and thus future questions would follow this same context. For example, what is the threshold serum cholesterol level where patients experiencing chest pain will most likely be diagnosed with angina? Another question is discovering the age ranges that are at risk of each type of chest pain. For example, what age group is most at risk for anginal chest pain? Due to the nature of anginal pain corresponding with heart disease, these questions are focussed on assesing the risks of anginal pain rather than assessing the factors of other types of chest pain.\n",
     "\n",
     "We believe our data analysis of cleveland_data will contribute as it can help understand a prime question much better and help understand the severity of chest pains more effectively."
    ]
