--- a/data/proposal.ipynb
+++ b/data/proposal.ipynb
@@ -9,12 +9,12 @@
     "\n",
     "  Heart disease is the leading cause of death across the world, account for 1 in 6 deaths. Angina, any chest pain caused by reduced blood flow to the heart, is a warning sign for risk of heart attack and stroke. Risk factors for heart disease are thus related to the experience of anginal pain due to reduced blood flow to the heart. Elevated cholesterol levels result in plaque build up in arterial walls known as atherosclerosis. This build up causes arteries to narrow, restricting blood flow to the heart. Resting blood pressure and maximum heart rate are both directly proportional to how much blood is pumped and therefore, how much blood is flown through to the heart. \n",
     "  \n",
-    "  We will be using a classification model to answer the predictive question of whether we can use the analysis of age, serum cholesterol levels, resting blood pressure and maximum heart rate of the patient to predict what type of chest pain the patient is experiencing.  The dataset we are using has heart disease data from Cleveland Clinic Foundation retrieved from the web. The dataset contains 14 variables including age, sex, type of chest pain, resting blood pressure, serum cholesterol, fasting blood sugar, resting ECG, maximum heart rate achieved, exercise induced angina, ST depression induced by exercise, slope of peak exercise segment, number of major vessels, defect, and angiographic disease status. It was processed from a larger data set containing 76 raw attributes but only 14 were deemed useful. "
+    "  We will be using a classification model to answer the predictive question, whether we can use the analysis of age, serum cholesterol levels, resting blood pressure and maximum heart rate of the patient to predict what type of chest pain the patient is experiencing.  The dataset we are using has heart disease data from Cleveland Clinic Foundation retrieved from the web. The dataset contains 14 variables including age, sex, type of chest pain, resting blood pressure, serum cholesterol, fasting blood sugar, resting ECG, maximum heart rate achieved, exercise induced angina, ST depression induced by exercise, slope of peak exercise segment, number of major vessels, defect, and angiographic disease status. It was processed from a larger data set containing 76 raw attributes but only 14 were deemed useful. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "322cfe5a-69ab-4cb2-a169-5487ff44e0b1",
    "metadata": {},
    "outputs": [
@@ -22,6 +22,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.0.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.1     \n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
+      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
+      "\n",
       "\u001b[1mRows: \u001b[22m\u001b[34m303\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m14\u001b[39m\n",
       "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
       "\u001b[1mDelimiter:\u001b[22m \",\"\n",
@@ -392,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "02c8ef36-5173-4125-9f80-13759fc51ae9",
    "metadata": {},
    "outputs": [
@@ -446,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "f60858fd-50eb-4db1-8453-ac427b3c3765",
    "metadata": {},
    "outputs": [
@@ -515,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "0f25cadd-3077-492f-a3dd-74577138d81c",
    "metadata": {},
    "outputs": [
@@ -581,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "a6e98975-af0d-4c1e-b129-d9e92f5dd0aa",
    "metadata": {},
    "outputs": [],
@@ -599,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "b620e463-aa13-4f15-88fb-32fbdb93728a",
    "metadata": {},
    "outputs": [],
@@ -617,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "91574efa-5796-4591-af9b-7341bc4994f8",
    "metadata": {},
    "outputs": [],
@@ -634,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "bbe2e767-cc8b-4764-b7d2-dc7e59ba5b4c",
    "metadata": {},
    "outputs": [],
@@ -652,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "c40d424b-3c57-4692-bf39-b146398bde93",
    "metadata": {},
    "outputs": [],
@@ -669,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "c6f1a60c-b264-4fda-a837-f43ffd47462e",
    "metadata": {},
    "outputs": [],
@@ -686,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "c9723e6c-05a4-4a41-8852-b04205076f64",
    "metadata": {},
    "outputs": [
@@ -801,12 +830,12 @@
    "source": [
     "### Methods\n",
     "\n",
-    "Classification is the method of predicting which category a new observation falls into depending on it's other variables. For our project, we will be analysing data by training a K-nearest neighbour classifier model with a subset of the data and using this model to predict what type of chest pain the patient is experiencing. Classification will be a useful methodology as we can assign multiple variables to be used as predictors, assign the same weight to each variable, and get a predicted category. There are 14 different variables in the cleveland_data set which all provide information on factors associated with heart disease. Of the available variables, we have chosen the 4 that we deem to be the most useful in predicting type of chest pain. Diagnosing chest pain is a complex process as there are numerous factors that impact the patient's experience. Thus, we have chosen multiple predictors in order to acheive a more accurate analysis of the factors causing chest pain. The required variables used in our data analysis will be as follows:\n",
+    "Classification is the method of predicting which category a new observation falls into depending on its other variables (predictors). For our project, we will be analysing data by training a K-nearest neighbour classifier model with a subset of the data and using this model to predict what type of chest pain the patient is experiencing. Classification will be a useful methodology as we can assign multiple variables to be used as predictors, assign the same weight to each variable, and get a predicted category. There are 14 different variables in the cleveland_data set which all provide information on factors associated with heart disease. We have chosen 4 variables that we deem to be the most useful in predicting type of chest pain. Diagnosing chest pain is a complex process as there are numerous factors that impact the patient's experience. Therefore, we have chosen multiple predictors in order to acheive a more accurate analysis of the factors causing chest pain. The required variables used in our data analysis will be as follows:\n",
     "- Predictors: Age (years), Serum cholesterol levels (mg/dl), Rest Blood Pressure (mm Hg) and Maximum Heart Rate Achieved (bpm)\n",
     "              \n",
     "- Category to predict: Type of Chest Pain (eg: 1, 2, 3, 4)\n",
     "\n",
-    "We have chosen to plot each permutation of the four variables as scatter plots and colored by the type of chest pain. This allows us visualize any preliminary relationships of individual predictors with type of chest pain. For example, from the above plots it appears as though higher maximum heart rate may be correlated with typical angina. We will also plot distribution graphs to visualize the distribution of each variable for the types of chest pain. From this point, we will combine all of the predictors into the classifiying model, use cross-validation, tune it, train the model using our training data, and lastly use the final model to predict the type of chest pain for the data in our testing set. "
+    "We have chosen to plot each permutation of the four variables as scatter plots and colored by the type of chest pain. This allows us to visualize any preliminary relationships of individual predictors with type of chest pain. For example, from the above plots it appears as though higher maximum heart rate may be correlated with typical angina. We will also plot distribution graphs to visualize the distribution of each variable for the types of chest pain. From this point, we will combine all of the predictors into the classifiying model, use cross-validation, tune it, train the model using our training data, and lastly use the final model to predict the type of chest pain for the data in our testing set. "
    ]
   },
   {
@@ -816,13 +845,21 @@
    "source": [
     "### Expected Outcomes and Significance\n",
     "\n",
-    "We are expecting that our model will enable us to find the relationship between the combination of every predictor and the type of chest pain a person may have. We can find whether this relationship will be a weak or strong relationship, a positive or negative relationship, and a linear or not linear relationship. We will also be able to predict the type of chest pain given the values of each variable. If we predict a value of 1 in an analysis it corresponds to typical angina, a value of 2 corresponds to atypical angina, a value of 3 corresponds to nonanginal pain, and a value of 4 corresponds to asymptomatic. In general, we expect to find that higher values of each predictor relate to typical and atypical angina pain while lower values of each predictor relate to non-anginal and asymptomatic. \n",
+    "We would expect to predict the type of chest pain given the values of each predictors. If we predict a value of 1 in an analysis it corresponds to typical angina, a value of 2 corresponds to atypical angina, a value of 3 corresponds to nonanginal pain, and a value of 4 corresponds to asymptomatic. In general, we expect to find that higher values of each predictor relate to typical and atypical angina pain while lower values of each predictor relate to non-anginal and asymptomatic. \n",
     "\n",
     "The impact of these findings could help doctors predict which patients are at a higher risk for heart attacks and strokes. Cholesterol, age, resting blood pressure and maxium heart rate are easily measurable factors that a general care physician could measure in typical check ups. If heart attack and stroke risk can be determined from these factors, doctors can help their patients implement preventative measures prior to the health incidents' occurring. Due to the severity of heart disease, it is critical that doctors are able to provide preventative treatment as opposed to reactive treatment. Notably, 12% of patients who experience heart attacks pass away as a result of it. The ability to predict which patients are at a higher risk could save hundreds of thousands of lives each year.\n",
     "\n",
     "Our data exploration is centered on finding the levels of each variable that predict the different types of chest pain and thus future questions would follow this same context. For example, what is the threshold serum cholesterol level where patients experiencing chest pain will most likely be diagnosed with angina? Another question is discovering the age ranges that are at risk of each type of chest pain. For example, what age group is most at risk for anginal chest pain? Due to the nature of anginal pain corresponding with heart disease, these questions are focussed on assesing the risks of anginal pain rather than assessing the factors of other types of chest pain.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c5fd2a9-9683-4be0-a2c3-64acec35ab1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
