discussion and refernces

--- a/data/proposal.ipynb
+++ b/data/proposal.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Heart (Cardiovascular) disease, a condition that affects the heart and blood vessels, is the leading cause of mortality worldwide, accounting for 1 in 6 deaths. Angina, a type of chest pain resulting from decreased blood flow to the heart, serves as an indicator of an individual's risk of heart attack and stroke. Notably, the risk factors for heart disease are closely associated with the experience of anginal pain due to restricted blood flow to the heart. Elevated levels of cholesterol lead to the accumulation of plaque in arterial walls, a condition called atherosclerosis. Consequently, these plaques cause the arteries to narrow, further limiting blood flow to the heart. Both resting blood pressure and maximum heart rate are directly correlated with the volume of blood that the heart pumps and therefore, the quantity of blood that reaches the heart. \n",
     "\n",
-    "We will use a classification model to answer the predictive question, \"Can we use the predictors serum cholesterol levels, resting blood pressure, and maximum heart rate of a patient to predict whether a patient is experiencing anginal or non-anginal pain?” The dataset in use comprises heart disease data from Cleveland Clinic Foundation and was retrieved from the web. It was processed from a larger data set containing 76 raw attributes but only 14 were deemed useful. The data dictionary below shows a comprehensive list of these variables. \n",
+    "We will use a classification model to answer the predictive question, \"Can we use the predictors age, serum cholesterol levels, resting blood pressure, and maximum heart rate of a patient to predict whether a patient is experiencing anginal or non-anginal pain?” The dataset in use comprises heart disease data from Cleveland Clinic Foundation and was retrieved from the web. It was processed from a larger data set containing 76 raw attributes but only 14 were deemed useful. The data dictionary below shows a comprehensive list of these variables. \n",
     "\n",
     "| Variable | Description |\n",
     "| -------- | ----------- | \n",
@@ -752,18 +752,33 @@
    "source": [
     "### Expected Outcomes and Significance\n",
     "\n",
-    "We would expect to predict the type of chest pain given the values of each predictors. If we predict a value of 1 in an analysis it corresponds to typical angina, a value of 2 corresponds to atypical angina, a value of 3 corresponds to nonanginal pain, and a value of 4 corresponds to asymptomatic. In general, we expect to find that higher values of each predictor relate to typical and atypical angina pain while lower values of each predictor relate to non-anginal and asymptomatic. \n",
+    "Varying the classification between anginal and non-anginal pain by comparing their trends with four different predictors, the model showed an estimate accuracy of 74.02%. The training data helped to predict the validity of testing data that the intensity of different predictors affected the type of chest pain found in a patient i.e. anginal or non-anginal. In general, higher values of each predictor relate to anginal pain while lower values of each predictor relate to non-anginal pain. \n",
     "\n",
     "The impact of these findings could help doctors predict which patients are at a higher risk for heart attacks and strokes. Cholesterol, age, resting blood pressure and maxium heart rate are easily measurable factors that a general care physician could measure in typical check ups. If heart attack and stroke risk can be determined from these factors, doctors can help their patients implement preventative measures prior to the health incidents' occurring. Due to the severity of heart disease, it is critical that doctors are able to provide preventative treatment as opposed to reactive treatment. Notably, 12% of patients who experience heart attacks pass away as a result of it. The ability to predict which patients are at a higher risk could save hundreds of thousands of lives each year.\n",
     "\n",
-    "Our data exploration is centered on finding the levels of each variable that predict the different types of chest pain and thus future questions would follow this same context. For example, what is the threshold serum cholesterol level where patients experiencing chest pain will most likely be diagnosed with angina? Another question is discovering the age ranges that are at risk of each type of chest pain. For example, what age group is most at risk for anginal chest pain? Due to the nature of anginal pain corresponding with heart disease, these questions are focussed on assesing the risks of anginal pain rather than assessing the factors of other types of chest pain.\n",
+    "Our data exploration is centered on finding the levels of each variable that predict the different type of chest pain and thus future questions would follow this same context. For example, what is the threshold serum cholesterol level where patients experiencing chest pain will most likely be diagnosed with anginal pain? Another question is discovering the age ranges that are at risk of each type of chest pain. For example, what age group is most at risk for anginal chest pain? Due to the nature of anginal pain corresponding with heart disease, these questions are focussed on assesing the risks of anginal pain rather than assessing the factors of other types of chest pain.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac727cbb-a90b-4658-919c-1207f8388d8b",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "- Source of Data Set: Janosi, A., Steinbrunn, W., Pfisterer, M., &amp; Detrano, R. (1988). Heart Disease Data Set. UCI Machine Learning Repository: Heart disease data set. Retrieved April 13, 2023, from https://archive.ics.uci.edu/ml/datasets/Heart+Disease \n",
+    "\n",
+    "- Sources:\n",
+    "\n",
+    "(1) Detrano , R., Janosi, A., Steinbrunn, W., Pfisterer, M., Schmid, J. J., Sandhu, S., Guppy, K. H., Lee, S., &amp; Froelicher, V. (1989). International application of a new probability algorithm for the diagnosis of coronary artery disease. The American journal of cardiology. Retrieved April 13, 2023, from https://pubmed.ncbi.nlm.nih.gov/2756873/ \n",
+    "\n",
+    "(2) W. Aha, D., &amp; Kibler, D. (1989). Instance-based prediction of heart-disease presence with the Cleveland database. Heartdisease : Mixed data : Cleveland Heart Disease Data. Retrieved April 13, 2023, from https://rdrr.io/cran/MixAll/man/HeartDisease.html \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93ee4f46",
+   "id": "28a90daf-4b43-4d88-b130-e3deee9a56d2",
    "metadata": {},
    "outputs": [],
    "source": []
