--- a/data/proposal.ipynb
+++ b/data/proposal.ipynb
@@ -642,7 +642,8 @@
     "  geom_line() +\n",
     "  labs(x = \"Neighbors\", y = \"Accuracy Estimate\") + \n",
     "  theme(text = element_text(size = 20))\n",
-    "accuracy_vs_k\n"
+    "accuracy_vs_k\n",
+    "print(\"Figure 2 Plot of how accuracy changes when the number of neighbour changes\")"
    ]
   },
   {
